--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png+xml" href="/tv.png" />
+    <link rel="icon" type="image/ico+xml" href="/tv.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Box</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
